--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "test": "vitest run"
   },
   "dependencies": {
+    "lucide-react": "^0.517.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
   },
